few code changes