@@ -69,7 +69,7 @@
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-core</artifactId>
-	    <version>5.2.10.Final</version>
+	    <version>6.0.0.Beta3</version>
 	</dependency>
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
@@ -79,8 +79,8 @@
 <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-core -->
 <dependency>
     <groupId>org.apache.activemq</groupId>
-    <artifactId>activemq-core</artifactId>
-    <version>5.7.0</version>
+    <artifactId>activemq-all</artifactId>
+    <version>5.16.3</version>
 </dependency>
 	
 <dependency>
@@ -95,17 +95,4 @@
     </dependency>
   </dependencies>
 
-<build>
-    <plugins>
-        <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <compilerArgs>
-                    <arg>--add-exports</arg>
-                    <arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
-                </compilerArgs>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
 </project>
